Min/Max screen resolution values changed to avoid issues when displaying website on mobile phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     background-color: rgb(217, 221, 201);
     font-family: "Lato", sans-serif;
 }
+
 h2 {
     background-color: #809283;
     padding: 3px;
@@ -34,7 +35,6 @@ h4 {
     font-family: "Oswald", sans-serif;
     text-transform: uppercase;
     font-size: 3.5rem;
-    /*padding: 0;*/
 }
 
 #logo-outer {
@@ -54,9 +54,7 @@ h4 {
 #contact-us {
     padding-bottom: 5px;
     font-size: 2rem;
-
 }
-
 
 /*Menu section*/
 header {
@@ -90,9 +88,9 @@ header {
     background-color: rgb(55, 83, 74);
     padding: 10px;
     font-weight: 900;
-    }
+}
 
-/*About Us section*/
+/*About-Us section*/
 
 #about-us p {
     padding: 1px;
@@ -135,7 +133,7 @@ img {
     padding: 5px;
 }
 
-/*Upcoming Events section*/
+/*Upcoming-Events section*/
 
 #events-map {
     width: 100%;
@@ -201,12 +199,12 @@ footer {
     font-size: 2.5rem;
     margin: 1%;
     padding: 5%;
-    /*color: ;*/
 }
 
 /* Media query section*/
 
-@media screen and (max-width: 1920px) {
+@media screen and (min-width: 1001px) and (max-width: 1920px) {
+
     .nav-item:first-child {
         margin-right: auto;
         margin-left: 1rem;
@@ -214,7 +212,7 @@ footer {
 
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (min-width: 521px) and (max-width: 1000px) {
 
     #club-name {
         font-size: 2rem;
@@ -239,7 +237,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 520px) {
     #club-name {
         font-size: 2rem;
     }
@@ -251,16 +249,14 @@ footer {
     .nav-list {
         padding: 2px 0;
         flex-direction: column;
-        justify-content: flex-start;
     }
 
     .nav-item {
-        margin-top: 5px;
+        margin-top: 2px;
     }
 
     .nav-item a {
         font-size: 1.5rem;
-        /*margin-bottom: 100px;*/
     }
 
     .nav-item a:hover {
@@ -268,5 +264,4 @@ footer {
         padding: 2px;
         font-weight: 500;
     }
-
 }
